# kai

./: .containerignore  .gitignore  CONTRIBUTING.md  JONAHNOTES.md  Makefile  Notes.md  README.md  ROADMAP.md  compose.yaml  generate_coolstuff.sh  pyproject.toml  remove-static-report.sh  report_types_new.yaml  requirements.in  requirements.txt  requirements.txt.mac_python_3_12  run_cli.py  run_mypy.sh  run_tests.sh  setup.py
.trunk/: trunk.yaml
archived/: ROADMAP.md  pyproject.toml
docs/: Getting_Started.md  LLM_Selection.md  OpenAI-API-Compatible-Alternatives.md  README.md  Usage.md  configuration.md  customApps.md  custom_apps.md  custom_ruleset.md  debug.md  demo.md  demo_mode.md  evaluation_builds.md  example_cli_script.md  getting_started.md  installation.md  llm_selection.md  podman_with_local_models.md  solvedIncidentStore.md
evaluations/: data.js
example/: .gitignore  README.md  analyze.sh  config.toml  dangerously_reset_coolstore.sh  debug_analysis_highlights.py  demo.md  initialize.toml  list_violations_for_file.py  prompt_engineering.ipynb  run_demo.py  run_demo_expected_output.diff
ide/: README.md
kai/: __init__.py  ai-test.ipynb  analyzer.py  analyzer_types.py  application_hub.py  cache.py  capture.py  cli.py  config.toml  config.yaml  config_default.toml  config_local.toml  constants.py  database.ini  embedding_provider.py  evaluation.py  git.py  hub_importer.py  import_from_hub.py  incident_store.py  incident_store_advanced.py  jonah-notes.md  kai_config.py  kai_logging.py  kai_trace.py  kai_vcr_util.py  llm_io_handler.py  model_provider.py  notes.md  prompt_builder.py  pseudocode.py  pydantic_models.py  report.py  result.py  scm.py  server.py  sync.py  test_evaluation.py  test_kai_logging.py  trace.py  (+1 more)
kai-analyzer/: go.mod  go.sum  main.go
kai-service/: .gitignore  Containerfile  Makefile  README.md  kai.conf  kai.py  mock-client.py  test.py
kai_analyzer_rpc/: .gitignore  go.mod  go.sum  main.go  main_test.go
kai_commit_miner/: README.md  pyproject.toml
kai_commit_miner/examples/: coolstore-javaee-to-quarkus.md  coolstore-no-analysis.md
kai_commit_miner/src/kai_commit_miner/: __main__.py  config.py  migration_inferrer.py  pipeline.py  report.py
kai_commit_miner/src/kai_commit_miner/analyzer/: base.py  cache.py  kantra.py  precomputed.py
kai_commit_miner/src/kai_commit_miner/attribution/: fix_attributor.py  models.py
kai_commit_miner/src/kai_commit_miner/classifier/: llm_classifier.py  models.py  prompts.py
kai_commit_miner/src/kai_commit_miner/client/: solution_server.py
kai_commit_miner/src/kai_commit_miner/diff/: models.py  report_differ.py
kai_commit_miner/src/kai_commit_miner/git/: commit_walker.py  diff_parser.py  repo.py
kai_commit_miner/tests/: test_commit_walker.py  test_coolstore_integration.py  test_diff_parser.py  test_fix_attributor.py  test_llm_classifier.py  test_report_differ.py
kai_mcp_solution_server/: Makefile  README.md  alembic.ini  analyzer_types.py  dao.py  kai_mcp_solution_server.db  kai_solutions_dao.py  main.py  pyproject.toml  requirements.txt  run_mypy.sh  run_tests.sh
kai_mcp_solution_server/config/: run.yaml  test_script.py
kai_mcp_solution_server/deploy/: Containerfile
kai_mcp_solution_server/deploy/ansible/: README.md
kai_mcp_solution_server/deploy/ansible/roles/kai_mcp_solution_server/defaults/: main.yml
kai_mcp_solution_server/deploy/ansible/roles/kai_mcp_solution_server/tasks/: main.yml
kai_mcp_solution_server/scripts/: manage_db.py  test_client.py
kai_mcp_solution_server/src/: README.md
kai_mcp_solution_server/src/kai_mcp_solution_server/: __main__.py  analyzer_types.py  constants.py  dao.py  resources.py  server.py  service.py  settings.py  util.py
kai_mcp_solution_server/src/kai_mcp_solution_server/ast_diff/: java.py  parser.py
kai_mcp_solution_server/src/kai_mcp_solution_server/db/: dao.py  python_objects.py  type_decorators.py
kai_mcp_solution_server/src/kai_mcp_solution_server/rest/: app.py  dependencies.py  schemas.py
kai_mcp_solution_server/src/kai_mcp_solution_server/rest/routers/: bulk.py  collections.py  health.py  hints.py  incidents.py  solutions.py  violations.py
kai_mcp_solution_server/tests/: __init__.py  generate_change_set.py  mcp_client.py  mcp_loader_script.py  ssl_utils.py  test_client.py  test_db_driver.py  test_duplicate_violations.py  test_integration.py  test_multiple_integration.py  test_rest_api.py
kai_mcp_solution_server/tests/data/0/: 0_extended_incident.json  0_proposed_solution.json
kai_mcp_solution_server/tests/data/1/: 0_extended_incident.json  0_proposed_solution.json  0_reasoning.txt  PriceChangeAlertConsumer.java  PriceChangeNotifierMDB.java
kai_mcp_solution_server/tests/data/2/: sequence.json  tool_call_a.json
kai_mcp_solution_server/tests/data/audit_library_examples/: inventory_sequence.json
kai_mcp_solution_server/tests/data/test_multiple_integration/: expected_tool_schemas.json
kai_mcp_solution_server/tools/alembic/: env.py
kai_mcp_solution_server/tools/alembic/versions/: a535c5759c14_created_initial_tables.py  b7e2f4a1c3d9_add_collection_tables.py
kai_mcp_solution_server/tools/deploy/: Containerfile  TestPostgres.Containerfile  podman-compose.yml
kai_mcp_solution_server/tools/deploy/ansible/: deploy.yml
kai_mcp_solution_server/ts-mcp-client/: README.md  package-lock.json  package.json  tsconfig.json
kai_mcp_solution_server/ts-mcp-client/src/: client.ts
kai_mcp_solution_server/ts-mcp-client/src/types/: sdk.d.ts
kai_solution_server/: compose.yaml  hub_importer.py  kai_config.py  kai_solutions_dao.py  kai_ss_mcp.py  main.py
phase-2/: ExampleClass.diff  ExampleClassAfterChange.java  change-tester.py  codeplan.py
playpen/: README.md  build.spec  package.json  rpc-client.js  rpc-client.py
samples/: .gitignore  TODO  add_data_to_hub.py  analyze_all.py  analyze_apps.py  analyze_cmt.sh  analyze_coolstore.sh  analyze_helloworld.sh  analyze_kitchensink.sh  analyze_ticketmonster.sh  config.py  example_analyze_single_app_with_custom_rules_tasks_qute.sh  fetch_analyze_apps.py  fetch_apps.py  fetch_sample_apps.sh
(+1797 files in other folders)
