[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kai"
version = "0.0.1"
dependencies = [
  # To generate a new requirements.txt:
  #   $ pip install pip-tools
  #   $ pip-compile --allow-unsafe > requirements.txt

  # To view requirements.txt's dependencies in a tree format:
  #   $ pip install pipdeptree
  #   $ pipdeptree > deps.txt
  # (optional if you have yq installed)
  #   $ pipdeptree --json-tree | yq -P > deps.yaml

  # --- Main dependencies ---
  "aiohttp==3.8.6; python_version < '3.12'",
  "aiohttp==3.9.3; python_version >= '3.12'",
  "gitpython==3.1.43",
  "pydantic==2.8.2",
  "pydantic-settings==2.3.4",
  "requests==2.32.3",
  "pygments==2.18.0",
  "python-dateutil==2.8.2",
  "sqlalchemy==2.0.22",
  "psycopg2-binary==2.9.9",
  "ibm-generative-ai==2.2.0",
  "Jinja2==3.1.4",
  "langchain==0.2.11",
  "langchain-community==0.2.10",
  "langchain-openai==0.1.17",
  "langchain-google-genai==1.0.9",
  "langchain-experimental==0.0.64",
  "gunicorn==22.0.0",
  "tree-sitter==0.22.3",
  "tree-sitter-java==0.21.0",
  "sequoia-diff==0.0.8",
  # Fabian's fork has changes that fix some async issues in the real vcrpy
  # that are yet to be accepted
  "vcrpy @ git+https://github.com/fabianvf/vcrpy.git@httpx-async-threadpool",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.1",
  # Allows Amazon Bedrock to work
  "boto3==1.34.157",

  # --- Client dependencies ---
  "pylspclient==0.1.2",

  # --- Testing dependencies ---
  "coverage==7.6.0",

  # --- For notebook development ---
  "jupyter==1.0.0",
  "jupyterlab-quarto==0.3.5",
  "nbdev==2.3.13",

  # --- Possibly can be removed ---
  "async-timeout==4.0.3",
  "asgiref==3.7.2",
  "click==8.1.7",         # For potential CLI stuff
  "typer==0.9.0",         # For potential CLI stuff
  "loguru==0.7.2",        # For potential logging improvements
  "unidiff==0.7.5",
]
requires-python = ">=3.11"
authors = [
  { name = "Konveyor Community", email = "konveyor-dev@googlegroups.com" },
]
description = "Konveyor AI - static code analysis driven migration to new targets via Generative AI"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://www.github.com/konveyor/kai"

[tool.setuptools.packages.find]
where = ["."]
include = ["kai*"]
exclude = ["tests*"]
namespaces = true


[tool.mypy]
plugins = ["pydantic.mypy"]

warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
# follow_imports = "silent"
# disallow_any_generics = true
# no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
