[project]
name = "kai-mcp-solution-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.15.2",
  "asyncpg>=0.30.0",
  "fastmcp>=2.8.0",
  "langchain>=0.3.19",
  "langchain-openai>=0.3.3",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.9.1",
  "pyyaml>=6.0.1",
  "sqlalchemy>=2.0.22",
  "types-pyyaml>=6.0.12.20250516",
]

# https://docs.astral.sh/uv/configuration/build-backend/#modules
[build-system]
requires = ["uv_build>=0.1.10,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "coverage>=7.9.1",
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "rich>=14.0.0",
  "ruff>=0.12.1",
]
