[project]
name = "kai-mcp-solution-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.15.2",
  "asyncpg>=0.30.0",
  "fastmcp>=2.8.0",
  "langchain>=1.2.4",
  "langchain-aws>=1.2.1",
  "langchain-azure-ai>=1.0.0",
  "langchain-azure-dynamic-sessions>=0.3.1",
  "langchain-community>=0.4.1",
  "langchain-deepseek>=1.0.0",
  "langchain-google-community>=3.0.0",
  "langchain-google-genai>=4.2.0",
  "langchain-google-vertexai>=3.2.0",
  "langchain-ollama>=1.0.1",
  "langchain-openai>=1.1.7",
  "langchain-core>=1.2.7",
  "langchain-text-splitters>=1.1.0",
  "pyasn1>=0.6.2",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.9.1",
  "pyyaml>=6.0.1",
  "requests>=2.32.5",
  "urllib3>=2.6.3",
  "zipp>=3.23.0",
  "sqlalchemy>=2.0.22",
  "tree-sitter>=0.24.0",
  "tree-sitter-java>=0.23.5",
  "types-pyyaml>=6.0.12.20250516",
]

# https://docs.astral.sh/uv/configuration/build-backend/#modules
[build-system]
requires = ["uv_build>=0.1.10,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "coverage>=7.9.1",
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "rich>=14.0.0",
  "ruff>=0.12.1",
]
